30th July 2009
--------------

Moved the "basic" storage implementation into the core library.
Updated consumer implementation to support OAuth 1.0a (have not completed updating provider yet).

17th November 2008
------------------

Added WCF code and example channel from Pablo Cibraro (http://weblogs.asp.net/cibrax/).
Organised code into 2 solution folders - core implementation - and examples.
Added changes file to track overall logical changes.
Moved MIT license into code region, so it'll collapse.
Signed the core assembly (can't sign WCF at the moment, because Microsoft.ServiceModel.Web.dll is unsigned).
